[tool.poetry]
name = "mindstorms"
version = "0.1.0"
description = "Operate LEGO MINDSTORMS Inventor Hub from your computer"
license = "MIT"
authors = ["Noam Raphael"]
readme = "README.md"
homepage = "https://github.com/noamraph/mindstorms"
repository = "https://github.com/noamraph/mindstorms"

[tool.poetry.dependencies]
python = "^3.8"
rshell = "^0.0.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
